# zero2prd-rs

./: .env  Cargo.toml
.github/workflows/: test.yml
.sqlx/: query-f02c5c696209ddea0a4543612d04d3a6899b1d6e8c484eac7169ea7fb386b905.json
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
