[package]
name = "zero2prd-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prd-rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.sqlx]
version = "0.8"
default-features = true
features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate"
]
