[package]
name = "zero2prd-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prd-rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
uuid = { version = "1.13", features = ["v4"] }
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.8"
default-features = true
features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "chrono",
  "uuid",
  "migrate"
]
